<resources>
    <string name="app_name">SpeachMyApp</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Recycler view and Retrofit</string>
    <string name="menu_slideshow">Chip rating</string>
    <string name="menu_SMTP">SMTP</string>
    <string name="menu_recycler_view">Recycler view</string>
    <string name="menu_webview">WebView</string>
    <string name="menu_datepicker">DatePicker</string>
    <!-- TODO: Remove or change this placeholder text -->

    <!-- input -->
    <string name="input_message">Message here...</string>
    <string name="input_title">Title...</string>
    <string name="input_your_mail">Email to send message...</string>
    <string name="input_search_url">Enter url here...</string>
    <string name="input_date">Selected date here</string>
    <!-- input -->

    <!-- button -->
    <string name="button_send">Send message</string>
    <string name="button_add">Add</string>
    <string name="button_load_url">Load url</string>
    <string name="button_add_cat_fact">New cat fact</string>
    <!-- button -->

    <!-- info -->
    <string name="info_rating_chipgroup">Add rating chip + touch it to delete</string>
    <string name="info_home">Please choose a link from drawer</string>
    <string name="info_welcome_drawer">Welcome, please choose a link</string>
    <!-- info -->


    <!-- direction -->
    <string name="direction_recycler">Recycler</string>
    <string name="direction_gallery">Recycler view and get request</string>
    <string name="direction_slideshow">Slideshow</string>
    <string name="direction_datetimepicker">DatePicker</string>
    <string name="direction_web_view">Web View</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- direction -->
</resources>