<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.smtp.smtp">

    <!-- TODO: Update blank fragment layout -->

    <EditText
        android:id="@+id/input_message"
        android:layout_width="379dp"
        android:layout_height="146dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:hint="@string/input_message"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.593"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_title" />

    <EditText
        android:id="@+id/input_title"
        android:layout_width="380dp"
        android:layout_height="58dp"
        android:layout_marginTop="144dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/input_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.548"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/input_mail_to_send"
        android:layout_width="382dp"
        android:layout_height="49dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/input_your_mail"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.655"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_message" />

    <Button
        android:id="@+id/button_send_mail"
        android:layout_width="377dp"
        android:layout_height="48dp"
        android:layout_marginBottom="56dp"
        android:text="@string/button_send"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>